# clean-backtesting

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_commission.py
src/sic/: zara2.py
src/ywcho/: basisguard.py  metric_tmp.ipynb  mosquito.py  mosquito_gateio.py  spread.py  spread2.py  spread_new.py  spread_new_1d.py  spread_new_1d_tmp.py
